2009-03-04  Gary Thomas  <gary@mlbassoc.com>

	* src/fconfig.c (get_config): Simplify memcpy() call to
	work around GCC 4.3 code generation error.  BZ#1000672

2009-02-20  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/flash.c (do_flash_init): Call cyg_flash_init() with
	NULL argument.

2009-02-19  John Dallaway  <john@dallaway.org.uk>

	* src/main.c: Update copyright notice.

2009-02-19  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/flash.c (do_flash_init): Update for minor flash API
        mod to call cyg_flash_set_global_printf() to set printf
        function.

2009-02-06  John Dallaway  <john@dallaway.org.uk>

	* cdl/redboot.cdl: Fix documentation reference.

2008-11-20  Bart Veer  <bartv@ecoscentric.com>

	* src/fconfig.c (flash_lookup_config): add a sanity check to
	reduce the risk of RedBoot going into an infinite loop.

2008-11-16  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/redboot.cdl, src/flash.c, src/fconfig.c:
	Flash-related eCosCentric changes to these files (including a
	merge of the flashv2 work) have been merged. Changes have been
	directly interleaved below on the correct dates.

2008-11-14  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/flash.c (fis_lock): Revert patch of 2005-10-05 which disabled
	locking entirely if FIS was disabled. Was better fixed by patch of
	2006-02-17.
	(fis_list): Revert patch of 2007-04-03 to avoid skipping entries
	at 0x0. Replaced by anoncvs patch of 2007-06-02 for consistency.

2008-09-11  Nick Garnett  <nickg@ecoscentric.com>

	* src/flash.c (fis_create, fis_write, fis_erase): Change alignment
	test to cope with flash blocks that are not a power of 2 in size.

2008-06-18  Bart Veer  <bartv@ecoscentric.com>

	* src/fconfig.c, src/flash.c, src/io.c, src/load.c, src/main.c,
  	src/xyzModem.c, include/redboot.h: more signed vs. unsigned char
	issues. 

2008-05-20  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/fs/e2fs.c (e2fs_mount): Avoid compiler strict aliasing
	problem.
